@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  -fortune-mod-gentoo-ru-0.04.ebuild, -fortune-mod-gentoo-ru-0.05.ebuild,
+  -fortune-mod-gentoo-ru-0.06.ebuild, -fortune-mod-gentoo-ru-0.07.ebuild,
+  -fortune-mod-gentoo-ru-0.08.ebuild:
+  drop old version
+
   16 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   +fortune-mod-gentoo-ru-0.10.ebuild:
   version bump
